@@ -61,7 +61,13 @@ SERVERLOOP: {
           $session = defined $q->param('session') ? $q->param('session') : 1;
           %cat = map { $_ => 1 } (defined $q->param('cat') ? $q->param('cat') : qw( cat_foo cat_bar ));
           my @categories = map { $cat{$_} ? "checked" : "" } qw( cat_foo cat_bar cat_baz );
-          $res = HTTP::Response->new(200, "OK", undef, sprintf($body,$location,$session,$query,@categories));
+          (my $h = $r->headers->{host}) =~ s/:\d+//;
+          $res = HTTP::Response->new(200, "OK", [
+                "Set-Cookie" => $q->cookie(-name => 'log-server',-value=>'shazam2', -discard=>1,),
+                'Cache-Control' => 'no-cache',
+                'Pragma' => 'no-cache',
+                'Max-Age' => 0,
+            ], sprintf($body,$location,$session,$query,@categories));
           $res->content_type('text/html');
           debug "Request " . ($r->uri->path || "/");
         };
